--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,5 +13,6 @@
 		<a href="/">Home</a>
 <a href="/about/">About</a>        <a href="/blog/">Blog</a>
 		<h1>My Astro Site</h1>
+		<h2>It now runs with Netlify automation :)</h2>
 	</body>
 </html>
