one more paragraph

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,5 +14,6 @@
 <a href="/about/">About</a>        <a href="/blog/">Blog</a>
 		<h1>My Astro Site</h1>
 		<h2>It now runs with Netlify automation :)</h2>
+		<p>What an awesome piece of machinery.</p>
 	</body>
 </html>
