--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "Index";
 ---
 
 <html lang="en">
@@ -7,12 +8,12 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>My Astro Site</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
 		<a href="/">Home</a>
 <a href="/about/">About</a>        <a href="/blog/">Blog</a>
-		<h1>My Astro Site</h1>
+		<h1>{pageTitle}</h1>
 		<h2>It now runs with Netlify automation :)</h2>
 		<p>What an awesome piece of machinery.</p>
 	</body>
