--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,6 +14,10 @@ const happy = true;
 const finished = false;
 const goal = 3;
 
+const skillColor = "crimson";
+const textWeight = "bold";
+const textCase = "uppercase";
+
 ---
 
 <html lang="en">
@@ -23,6 +27,17 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<style define:vars={{skillColor, textWeight, textCase}}>
+			h1 {
+			  color: purple;
+			  font-size: 4rem;
+			}
+			.skill {
+   				color: var(--skillColor);
+   				font-weight: var(--textWeight);
+				text-transform: var(--textCase);
+ 			}
+		  </style>
 	</head>
 	<body>
         <a href="/">Home</a>
@@ -45,7 +60,7 @@ const goal = 3;
 </ul>
 <p>My skills are:</p>
 <ul>
-  {skills.map((skill) => <li>{skill}</li>)}
+  {skills.map((skill) => <li class="skill">{skill}</li>)}
 </ul>
 
 {happy && <p>I am happy to be learning Astro!</p>}
