--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,8 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+
 const pageTitle = "Blog";
 ---
 
@@ -11,9 +15,7 @@ const pageTitle = "Blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+        <Header />
 		<h1>{pageTitle}</h1>
   <h2>... this is where the blog goes.</h2>
   <ul>
@@ -21,5 +23,6 @@ const pageTitle = "Blog";
 	<li><a href="/posts/post-2/">Post 2</a></li>
 	<li><a href="/posts/post-3/">Post 3</a></li>
   </ul>
+  <Footer />
 	</body>
 </html>
