--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,4 +4,5 @@ const pageTitle = "Home Page";
 ---
 <BaseLayout pageTitle={pageTitle}>
   <h2>My awesome blog subtitle</h2>
+  <p>This page is connected to Netlify for automated deployment. Sweet!</p>
 </BaseLayout>
