Tailwind and Typography

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,4 +1,4 @@
 ---
 const {url, title} = Astro.props;
 ---
-<li><a href={url}>{title}</a></li>
+<li class="leading-8"><a class="underline" href={url}>{title}</a></li>
