--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,3 +7,11 @@
     <a href="/blog/">Blog</a>
     <a href="/tags/">Tags</a>
 </div>
+
+<style>
+    .nav-links a{
+        margin:0 1.4rem 0 0;
+        font-weight:bold;
+        font-size:1.2rem;
+    }
+</style>
