--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+// import '../styles/global.css';
 const { pageTitle } = Astro.props;
 ---
 <html lang="en">
@@ -12,9 +12,9 @@ const { pageTitle } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body>
+  <body class="p-16 bg-slate-100 prose prose-lg">
     <Header />
-    <h1>{pageTitle}</h1>
+    <h1 class="border-b-2 border-teal-100 font-serif text-4xl pt-2 mt-8 pb-2 mb-8">{pageTitle}</h1>
     <slot />
     <Footer />
     <script>
