--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -27,7 +27,7 @@ const textCase = "uppercase";
   <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
 
   <p>Here are a few facts about me:</p>
-<ul>
+<ul class="list-disc ml-8">
   <li>My name is {identity.firstName}.</li>
   <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
   {identity.hobbies.length >= 2 && 
@@ -35,7 +35,7 @@ const textCase = "uppercase";
   } 
 </ul>
 <p>My skills are:</p>
-<ul>
+<ul class="list-disc ml-8">
   {skills.map((skill) => <li class="skill">{skill}</li>)}
 </ul>
 
