--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -6,7 +6,7 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <div class="tags">
+    <div class="tags flex flex-wrap">
         {tags.map((tag) => (
             <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
         ))}
@@ -14,16 +14,6 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 </BaseLayout>
 
 <style>
-    a {
-      color: #00539F;
-    }
-  
-    .tags {
-      display: flex; 
-      flex-wrap: wrap; 
-      margin: 0 auto;  
-    }
-  
     .tag {
       margin: 0.25em;
       border: dotted 1px #a1a1a1;
