--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ import Social from './Social.astro';
     }
   </style>
 
-<footer>
+<footer class="border-t-2 pt-8 border-teal-100">
     <Social platform="twitter" username="astrodotbuild" />
     <Social platform="github" username="withastro" />
     <Social platform="youtube" username="astrodotbuild" />
