--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,6 +6,7 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
     <a href="/tags/">Tags</a>
+    <a href="/strapi/">Strapi</a>
 </div>
 
 <style>
