--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,9 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
     <a href="/tags/">Tags</a>
-    <a href="/strapi/">Strapi</a>
+    <a href="/work/">Projects</a>
+    <!-- <a href="/strapi/">Strapi</a>
+    <a href="/typicode/">Typicode</a> -->
 </div>
 
 <style>
