--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,12 +1,5 @@
 ---
+import CSS from './Social.module.scss';
 const { platform, username } = Astro.props;
 ---
-<a class="bg-orange-200" href={`https://www.${platform}.com/${username}`}>{platform}</a>
-
-<style>
-    a {
-      padding: 0.5rem 1rem;
-      color: white;
-      text-decoration: none;
-    }
-  </style>
+<a class={CSS.social} href={`https://www.${platform}.com/${username}`}>{platform}</a>
