--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ import Social from './Social.astro';
   </style>
 
 <footer class="border-t-2 pt-8 border-teal-100">
-    <Social platform="twitter" username="astrodotbuild" />
-    <Social platform="github" username="withastro" />
-    <Social platform="youtube" username="astrodotbuild" />
+    <Social platform="twitter" username="andrearistori" />
+    <Social platform="github" username="ristoman" />
+    <Social platform="linkedin" username="in/andrearistori" />
 </footer>
