--- a/src/pages/strapi.astro
+++ b/src/pages/strapi.astro
@@ -3,17 +3,19 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import BlogPost from '../components/BlogPost.astro';
 const pageTitle = "Content from Strapi CMS";
 const response = await fetch("http://127.0.0.1:1337/api/posts?populate=*");
-const { data } = await response.json();
+const {data} = await response.json();
 ---
 <BaseLayout pageTitle={pageTitle}>
     <ul>
-        {data.map((post) => (
-    <img
-        src={`http://127.0.0.1:1337${post.attributes.image.data.attributes.url}`}
-        alt={post.attributes.image.data.attributes.name}
-      />
-      <BlogPost url={`../posts/${post.attributes.slug}`} title={post.attributes.title}></BlogPost>
-      <p>{post.attributes.slug}</p>
+      {data.map((post) => (
+        <article style="border:1px solid black; background-color:white; margin-bottom:1rem;">
+        <img
+          src={`http://127.0.0.1:1337${post.attributes.image.data.attributes.url}`}
+          alt={post.attributes.image.data.attributes.name}
+          style="object-fit:cover; max-height:12rem; width:100%; padding-top:0; margin-top:0"
+        />
+        <BlogPost url={`../posts/${post.attributes.slug}`} title={post.attributes.title} />
+      </article>
       ))}
     </ul>
   </BaseLayout>
