--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,10 @@ html {
     font-size: 2.5rem;
   }
 
+  .pageTitle{
+    font-family: Anton, sans-serif;
+    text-transform: uppercase;
+}
   /* nav styles */
 
 .hamburger {
