--- a/src/pages/strapi.astro
+++ b/src/pages/strapi.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import BlogPost from '../components/BlogPost.astro';
 const pageTitle = "Content from Strapi CMS";
@@ -18,4 +18,4 @@ const {data} = await response.json();
       </article>
       ))}
     </ul>
-  </BaseLayout>
+  </BaseLayout> -->
