--- a/src/pages/typicode.astro
+++ b/src/pages/typicode.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import BlogPost from '../components/BlogPost.astro';
 const pageTitle = "Content from Typicode";
@@ -13,4 +13,4 @@ const posts = await response.json();
         <p>{post.body}</p>
       ))}
     </ul>
-  </BaseLayout>
+  </BaseLayout> -->
