--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
 layout: '../../layouts/MarkdownPostLayout.astro';
 import { Markdown } from '@astropub/md';
@@ -24,4 +24,4 @@ const { post } = Astro.props;
   alt={post.attributes.image.data.attributes.name}
 />
 <article><Markdown of={post.attributes.body} /></article>
-</BaseLayout>   
+</BaseLayout>    -->
