build should work now

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,11 +2,11 @@
 ---
 
 <div class="nav-links">
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-    <a href="/tags/">Tags</a>
-    <a href="/work/">Projects</a>
+    <a class="text-indigo-900 dark:text-indigo-100" href="/">Home</a>
+    <a class="text-indigo-900 dark:text-indigo-100" href="/about/">About</a>
+    <a class="text-indigo-900 dark:text-indigo-100" href="/blog/">Blog</a>
+    <!-- <a class="text-indigo-900 dark:text-indigo-100" href="/tags/">Tags</a>
+    <a class="text-indigo-900 dark:text-indigo-100" href="/work/">Projects</a> -->
     <!-- <a href="/strapi/">Strapi</a>
     <a href="/typicode/">Typicode</a> -->
 </div>
