--- a/strapi_stuff/work.astro
+++ b/strapi_stuff/work.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import Project from '../components/Project.astro';
+import BaseLayout from '../src/layouts/BaseLayout.astro';
+import Project from '../src/components/Project.astro';
 const allProjects = await Astro.glob('../pages/projects/*.md');
 const pageTitle = "Work";
 ---
